--- a/MDK-ARM/boot_obj/bootloader.build_log.htm
+++ b/MDK-ARM/boot_obj/bootloader.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  09/12/2016
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 2 (build 183)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'bootloader'
-assembling startup_stm32l053xx.s...
+compiling boot_main.c...
 linking...
-Program Size: Code=3364 RO-data=260 RW-data=84 ZI-data=1060  
+Program Size: Code=3716 RO-data=260 RW-data=88 ZI-data=1064  
 FromELF: creating hex file...
 ".\boot_obj\bootloader.axf" - 0 Error(s), 0 Warning(s).
 
