--- a/MDK-ARM/app_obj/application.build_log.htm
+++ b/MDK-ARM/app_obj/application.build_log.htm
@@ -27,9 +27,12 @@ Project File Date:  09/12/2016
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 2 (build 183)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'application'
-assembling startup_stm32l053xx.s...
+compiling appConfig.c...
+compiling led.c...
+compiling app_main.c...
+compiling bsw.c...
 linking...
-Program Size: Code=3188 RO-data=348 RW-data=68 ZI-data=1060  
+Program Size: Code=3480 RO-data=404 RW-data=76 ZI-data=1076  
 FromELF: creating hex file...
 ".\app_obj\application.axf" - 0 Error(s), 0 Warning(s).
 
@@ -49,7 +52,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
