--- a/MDK-ARM/boot_obj/bootloader.build_log.htm
+++ b/MDK-ARM/boot_obj/bootloader.build_log.htm
@@ -22,23 +22,16 @@ Dialog DLL:      TARMCM1.DLL V1.10.0.0
  
 <h2>Project:</h2>
 D:\GitHub\sctby-upgrade\MDK-ARM\bootloader.uvprojx
-Project File Date:  09/18/2016
+Project File Date:  09/19/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 2 (build 183)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'bootloader'
-compiling ota.c...
-..\src\xmodem\ota.c(51): warning:  #550-D: variable "IsOtaStart" was set but never used
-  static OtaBool IsOtaStart;
-..\src\xmodem\ota.c(52): warning:  #177-D: variable "MaxOtaTime" was declared but never referenced
-  static uint32_t MaxOtaTime = 0xff000;
-..\src\xmodem\ota.c(59): warning:  #177-D: variable "SleepTick" was declared but never referenced
-  static uint32_t SleepTick;
-..\src\xmodem\ota.c: 3 warnings, 0 errors
+compiling xmodem.c...
 linking...
-Program Size: Code=4552 RO-data=252 RW-data=120 ZI-data=1080  
+Program Size: Code=5212 RO-data=276 RW-data=132 ZI-data=1336  
 FromELF: creating hex file...
-".\boot_obj\bootloader.axf" - 0 Error(s), 3 Warning(s).
+".\boot_obj\bootloader.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
