--- a/MDK-ARM/boot_obj/bootloader.htm
+++ b/MDK-ARM/boot_obj/bootloader.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\boot_obj\bootloader.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\boot_obj\bootloader.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060183: Last Updated: Tue Sep 20 19:58:26 2016
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060183: Last Updated: Wed Sep 21 09:39:19 2016
 <BR><P>
 <H3>Maximum Stack Usage =        324 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -178,7 +178,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[41]"></a>__aeabi_memcpy</STRONG> (Thumb, 36 bytes, Stack size 0 bytes, memcpya.o(.text))
-<BR><BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
+<BR><BR>[Called By]<UL><LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
 <LI><a href="#[27]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemCallBack
 <LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
 </UL>
@@ -187,9 +187,9 @@ Global Symbols
 
 <P><STRONG><a name="[61]"></a>__aeabi_memcpy8</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, memcpya.o(.text), UNUSED)
 
-<P><STRONG><a name="[4e]"></a>__aeabi_uread4</STRONG> (Thumb, 20 bytes, Stack size 0 bytes, uread4.o(.text))
+<P><STRONG><a name="[4d]"></a>__aeabi_uread4</STRONG> (Thumb, 20 bytes, Stack size 0 bytes, uread4.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
-<LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc32
+<LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc32
 </UL>
 
 <P><STRONG><a name="[62]"></a>__rt_uread4</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, uread4.o(.text), UNUSED)
@@ -295,7 +295,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[32]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_InitTick
 <LI><a href="#[30]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GetTick
 </UL>
-<BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
+<BR>[Called By]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
 </UL>
 
 <P><STRONG><a name="[34]"></a>HAL_RCC_GetHCLKFreq</STRONG> (Thumb, 26 bytes, Stack size 8 bytes, stm32l0xx_hal_rcc.o(i.HAL_RCC_GetHCLKFreq))
@@ -306,10 +306,10 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[32]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_InitTick
 </UL>
 
-<P><STRONG><a name="[4c]"></a>HAL_RCC_GetOscConfig</STRONG> (Thumb, 186 bytes, Stack size 16 bytes, stm32l0xx_hal_rcc.o(i.HAL_RCC_GetOscConfig))
+<P><STRONG><a name="[4b]"></a>HAL_RCC_GetOscConfig</STRONG> (Thumb, 186 bytes, Stack size 16 bytes, stm32l0xx_hal_rcc.o(i.HAL_RCC_GetOscConfig))
 <BR><BR>[Stack]<UL><LI>Max Depth = 16<LI>Call Chain = HAL_RCC_GetOscConfig
 </UL>
-<BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
+<BR>[Called By]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
 </UL>
 
 <P><STRONG><a name="[3a]"></a>HAL_RCC_GetSysClockFreq</STRONG> (Thumb, 108 bytes, Stack size 8 bytes, stm32l0xx_hal_rcc.o(i.HAL_RCC_GetSysClockFreq))
@@ -326,7 +326,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[32]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_InitTick
 <LI><a href="#[30]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GetTick
 </UL>
-<BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
+<BR>[Called By]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
 </UL>
 
 <P><STRONG><a name="[3d]"></a>HAL_RTCEx_WakeUpTimerEventCallback</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, stop.o(i.HAL_RTCEx_WakeUpTimerEventCallback))
@@ -394,11 +394,11 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32l053xx.o(RESET)
 </UL>
-<P><STRONG><a name="[45]"></a>XmodemReceive</STRONG> (Thumb, 82 bytes, Stack size 16 bytes, xmodem.o(i.XmodemReceive))
+<P><STRONG><a name="[44]"></a>XmodemReceive</STRONG> (Thumb, 82 bytes, Stack size 16 bytes, xmodem.o(i.XmodemReceive))
 <BR><BR>[Stack]<UL><LI>Max Depth = 68<LI>Call Chain = XmodemReceive &rArr; receive &rArr; checkPkt &rArr; crc16
 </UL>
-<BR>[Calls]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;sendCmd
-<LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;receive
+<BR>[Calls]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;sendCmd
+<LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;receive
 </UL>
 <BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
 </UL>
@@ -409,28 +409,28 @@ Global Symbols
 
 <P><STRONG><a name="[67]"></a>__scatterload_zeroinit</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_zeroinit), UNUSED)
 
-<P><STRONG><a name="[4b]"></a>clkConfig</STRONG> (Thumb, 96 bytes, Stack size 88 bytes, clock.o(i.clkConfig))
+<P><STRONG><a name="[4a]"></a>clkConfig</STRONG> (Thumb, 96 bytes, Stack size 88 bytes, clock.o(i.clkConfig))
 <BR><BR>[Stack]<UL><LI>Max Depth = 156<LI>Call Chain = clkConfig &rArr; HAL_RCC_OscConfig &rArr; HAL_InitTick &rArr; HAL_RCC_GetHCLKFreq &rArr; HAL_RCC_GetSysClockFreq &rArr; __aeabi_uidivmod
 </UL>
 <BR>[Calls]<UL><LI><a href="#[3b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_OscConfig
-<LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_GetOscConfig
+<LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_GetOscConfig
 <LI><a href="#[39]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_ClockConfig
 </UL>
 <BR>[Called By]<UL><LI><a href="#[22]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[4a]"></a>crc16</STRONG> (Thumb, 44 bytes, Stack size 12 bytes, crc.o(i.crc16))
+<P><STRONG><a name="[49]"></a>crc16</STRONG> (Thumb, 44 bytes, Stack size 12 bytes, crc.o(i.crc16))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = crc16
 </UL>
-<BR>[Called By]<UL><LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
+<BR>[Called By]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
 <LI><a href="#[53]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;identify
-<LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;checkPkt
+<LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;checkPkt
 </UL>
 
-<P><STRONG><a name="[4d]"></a>crc32</STRONG> (Thumb, 128 bytes, Stack size 32 bytes, crc.o(i.crc32))
+<P><STRONG><a name="[4c]"></a>crc32</STRONG> (Thumb, 128 bytes, Stack size 32 bytes, crc.o(i.crc32))
 <BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = crc32
 </UL>
-<BR>[Calls]<UL><LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uread4
+<BR>[Calls]<UL><LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uread4
 </UL>
 <BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
 </UL>
@@ -439,32 +439,32 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[22]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[4f]"></a>flashLock</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, flash.o(i.flashLock))
+<P><STRONG><a name="[4e]"></a>flashLock</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, flash.o(i.flashLock))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = flashLock
 </UL>
-<BR>[Calls]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;waitOpDone
+<BR>[Calls]<UL><LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;waitOpDone
 </UL>
-<BR>[Called By]<UL><LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashHalfPageWrite (via Veneer)
-<LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
+<BR>[Called By]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashHalfPageWrite (via Veneer)
+<LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
 </UL>
 
-<P><STRONG><a name="[42]"></a>flashPageErase</STRONG> (Thumb, 46 bytes, Stack size 16 bytes, flash.o(i.flashPageErase))
+<P><STRONG><a name="[50]"></a>flashPageErase</STRONG> (Thumb, 46 bytes, Stack size 16 bytes, flash.o(i.flashPageErase))
 <BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = flashPageErase &rArr; flashUnlock
 </UL>
 <BR>[Calls]<UL><LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashUnlock
-<LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashLock
+<LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashLock
 <LI><a href="#[52]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;FlashErase
 </UL>
-<BR>[Called By]<UL><LI><a href="#[27]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemCallBack
+<BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
 </UL>
 
 <P><STRONG><a name="[51]"></a>flashUnlock</STRONG> (Thumb, 44 bytes, Stack size 8 bytes, flash.o(i.flashUnlock))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = flashUnlock
 </UL>
-<BR>[Calls]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;waitOpDone
+<BR>[Calls]<UL><LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;waitOpDone
 </UL>
-<BR>[Called By]<UL><LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashHalfPageWrite (via Veneer)
-<LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
+<BR>[Called By]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashHalfPageWrite (via Veneer)
+<LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
 </UL>
 
 <P><STRONG><a name="[22]"></a>main</STRONG> (Thumb, 34 bytes, Stack size 0 bytes, boot_main.o(i.main))
@@ -472,23 +472,24 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[31]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_Init
 <LI><a href="#[54]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;InitUart1
-<LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
+<LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;clkConfig
 <LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
 <LI><a href="#[55]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc32Init
 <LI><a href="#[2b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BSP_LED_Init
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
 </UL>
-<P><STRONG><a name="[56]"></a>ota</STRONG> (Thumb, 210 bytes, Stack size 24 bytes, ota.o(i.ota))
+<P><STRONG><a name="[56]"></a>ota</STRONG> (Thumb, 214 bytes, Stack size 24 bytes, ota.o(i.ota))
 <BR><BR>[Stack]<UL><LI>Max Depth = 324<LI>Call Chain = ota &rArr; otaRead &rArr; identify &rArr; crc16
 </UL>
 <BR>[Calls]<UL><LI><a href="#[2f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_Delay
-<LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uread4
+<LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uread4
 <LI><a href="#[41]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_memcpy
-<LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
-<LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
-<LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemReceive
-<LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc32
+<LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
+<LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
+<LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemReceive
+<LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc32
+<LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
 <LI><a href="#[2e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;BSP_LED_On
 </UL>
 <BR>[Called By]<UL><LI><a href="#[22]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
@@ -499,11 +500,11 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[30]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GetTick
 </UL>
-<BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
+<BR>[Called By]<UL><LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
 </UL>
 
 <P><STRONG><a name="[58]"></a>uartSend_IT</STRONG> (Thumb, 40 bytes, Stack size 0 bytes, uart.o(i.uartSend_IT))
-<BR><BR>[Called By]<UL><LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
+<BR><BR>[Called By]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
 </UL>
 
 <P><STRONG><a name="[3e]"></a>wakeUpTimeIRQHandler</STRONG> (Thumb, 10 bytes, Stack size 8 bytes, stop.o(i.wakeUpTimeIRQHandler))
@@ -514,11 +515,11 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;RTC_IRQHandler
 </UL>
 
-<P><STRONG><a name="[43]"></a>flashHalfPageWrite</STRONG> (Thumb, 140 bytes, Stack size 16 bytes, flash_ram.o(i.flashHalfPageWrite))
+<P><STRONG><a name="[42]"></a>flashHalfPageWrite</STRONG> (Thumb, 140 bytes, Stack size 16 bytes, flash_ram.o(i.flashHalfPageWrite))
 <BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = flashHalfPageWrite &rArr; flashUnlock
 </UL>
 <BR>[Calls]<UL><LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashUnlock (via Veneer)
-<LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashLock (via Veneer)
+<LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashLock (via Veneer)
 </UL>
 <BR>[Called By]<UL><LI><a href="#[27]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemCallBack (via Veneer)
 </UL>
@@ -538,70 +539,69 @@ Local Symbols
 <P><STRONG><a name="[52]"></a>FlashErase</STRONG> (Thumb, 100 bytes, Stack size 8 bytes, flash.o(i.FlashErase))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = FlashErase
 </UL>
-<BR>[Called By]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
+<BR>[Called By]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
 </UL>
 
-<P><STRONG><a name="[50]"></a>waitOpDone</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, flash.o(i.waitOpDone))
+<P><STRONG><a name="[4f]"></a>waitOpDone</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, flash.o(i.waitOpDone))
 <BR><BR>[Called By]<UL><LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashUnlock
-<LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashLock
+<LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashLock
 </UL>
 
-<P><STRONG><a name="[49]"></a>checkPkt</STRONG> (Thumb, 94 bytes, Stack size 16 bytes, xmodem.o(i.checkPkt))
+<P><STRONG><a name="[48]"></a>checkPkt</STRONG> (Thumb, 94 bytes, Stack size 16 bytes, xmodem.o(i.checkPkt))
 <BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = checkPkt &rArr; crc16
 </UL>
-<BR>[Calls]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc16
+<BR>[Calls]<UL><LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc16
 </UL>
-<BR>[Called By]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;receive
+<BR>[Called By]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;receive
 </UL>
 
-<P><STRONG><a name="[46]"></a>receive</STRONG> (Thumb, 92 bytes, Stack size 24 bytes, xmodem.o(i.receive))
+<P><STRONG><a name="[45]"></a>receive</STRONG> (Thumb, 92 bytes, Stack size 24 bytes, xmodem.o(i.receive))
 <BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = receive &rArr; checkPkt &rArr; crc16
 </UL>
-<BR>[Calls]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;sendCmd
-<LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;checkPkt
+<BR>[Calls]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;sendCmd
+<LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;checkPkt
 </UL>
-<BR>[Called By]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemReceive
+<BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemReceive
 </UL>
 
-<P><STRONG><a name="[47]"></a>sendCmd</STRONG> (Thumb, 14 bytes, Stack size 8 bytes, xmodem.o(i.sendCmd))
+<P><STRONG><a name="[46]"></a>sendCmd</STRONG> (Thumb, 14 bytes, Stack size 8 bytes, xmodem.o(i.sendCmd))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = sendCmd
 </UL>
-<BR>[Called By]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemReceive
-<LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;receive
+<BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemReceive
+<LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;receive
 </UL>
 
-<P><STRONG><a name="[27]"></a>XmodemCallBack</STRONG> (Thumb, 44 bytes, Stack size 72 bytes, ota.o(i.XmodemCallBack))
-<BR><BR>[Stack]<UL><LI>Max Depth = 96<LI>Call Chain = XmodemCallBack &rArr; flashHalfPageWrite &rArr; flashUnlock
+<P><STRONG><a name="[27]"></a>XmodemCallBack</STRONG> (Thumb, 62 bytes, Stack size 80 bytes, ota.o(i.XmodemCallBack))
+<BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = XmodemCallBack &rArr; flashHalfPageWrite &rArr; flashUnlock
 </UL>
 <BR>[Calls]<UL><LI><a href="#[41]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_memcpy
-<LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashHalfPageWrite (via Veneer)
-<LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashPageErase
+<LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;flashHalfPageWrite (via Veneer)
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> ota.o(i.ota)
 </UL>
 <P><STRONG><a name="[25]"></a>XmodemRead</STRONG> (Thumb, 18 bytes, Stack size 8 bytes, ota.o(i.XmodemRead))
 <BR><BR>[Stack]<UL><LI>Max Depth = 308<LI>Call Chain = XmodemRead &rArr; otaRead &rArr; identify &rArr; crc16
 </UL>
-<BR>[Calls]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
+<BR>[Calls]<UL><LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> ota.o(i.ota)
 </UL>
 <P><STRONG><a name="[26]"></a>XmodemWrite</STRONG> (Thumb, 14 bytes, Stack size 8 bytes, ota.o(i.XmodemWrite))
 <BR><BR>[Stack]<UL><LI>Max Depth = 292<LI>Call Chain = XmodemWrite &rArr; otaWrite &rArr; crc16
 </UL>
-<BR>[Calls]<UL><LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
+<BR>[Calls]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaWrite
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> ota.o(i.ota)
 </UL>
 <P><STRONG><a name="[53]"></a>identify</STRONG> (Thumb, 104 bytes, Stack size 16 bytes, ota.o(i.identify))
 <BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = identify &rArr; crc16
 </UL>
-<BR>[Calls]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc16
+<BR>[Calls]<UL><LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc16
 </UL>
-<BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
+<BR>[Called By]<UL><LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;otaRead
 </UL>
 
-<P><STRONG><a name="[44]"></a>otaRead</STRONG> (Thumb, 52 bytes, Stack size 272 bytes, ota.o(i.otaRead))
+<P><STRONG><a name="[43]"></a>otaRead</STRONG> (Thumb, 52 bytes, Stack size 272 bytes, ota.o(i.otaRead))
 <BR><BR>[Stack]<UL><LI>Max Depth = 300<LI>Call Chain = otaRead &rArr; identify &rArr; crc16
 </UL>
 <BR>[Calls]<UL><LI><a href="#[57]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uartReceive_Pkt
@@ -612,11 +612,11 @@ Local Symbols
 <LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
 </UL>
 
-<P><STRONG><a name="[48]"></a>otaWrite</STRONG> (Thumb, 98 bytes, Stack size 272 bytes, ota.o(i.otaWrite))
+<P><STRONG><a name="[47]"></a>otaWrite</STRONG> (Thumb, 98 bytes, Stack size 272 bytes, ota.o(i.otaWrite))
 <BR><BR>[Stack]<UL><LI>Max Depth = 284<LI>Call Chain = otaWrite &rArr; crc16
 </UL>
 <BR>[Calls]<UL><LI><a href="#[58]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;uartSend_IT
-<LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc16
+<LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;crc16
 </UL>
 <BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;XmodemWrite
 <LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ota
