--- a/MDK-ARM/app_obj/application.build_log.htm
+++ b/MDK-ARM/app_obj/application.build_log.htm
@@ -17,25 +17,19 @@ Library Manager: ArmAr.exe V5.06 update 2 (build 183)
 Hex Converter:   FromElf.exe V5.06 update 2 (build 183)
 CPU DLL:         SARMCM3.DLL V5.20
 Dialog DLL:      DARMCM1.DLL V1.14.0.0
-Target DLL:      UL2CM3.DLL V1.157.18.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TARMCM1.DLL V1.10.0.0
  
 <h2>Project:</h2>
 D:\GitHub\sctby-upgrade\MDK-ARM\application.uvprojx
-Project File Date:  09/12/2016
+Project File Date:  09/23/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 2 (build 183)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'application'
-compiling stm32l0xx_it.c...
-compiling uart.c...
-compiling app_main.c...
-compiling bsw.c...
-linking...
-Program Size: Code=3332 RO-data=388 RW-data=76 ZI-data=1076  
-FromELF: creating hex file...
 After Build - User command #1: D:\GitHub\sctby-upgrade\MDK-ARM\createFirm.bat
 D:\GitHub\sctby-upgrade\MDK-ARM>"C:\Keil_v5\ARM\ARMCC\Bin\fromelf.exe" --bin ".\app_obj\application.axf"  --output firmware\app 
+D:\GitHub\sctby-upgrade\MDK-ARM>"C:\Keil_v5\ARM\ARMCC\Bin\fromelf.exe" --bincombined --bincombined_padding=1,0x1A ".\app_obj\application.axf"  --output firmware\app\imag.bin 
 ".\app_obj\application.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -54,7 +48,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
